name:          critic
version:       0.0.1
synopsis:      XML parser and writer
author:        Jonny Beaumont
maintainer:    Jonny Beaumont <jonathan.r.beaumont@gmail.com>, github: @jrbeaumont
category:      Parser
build-type:    Simple
cabal-version: >=1.10

library
    build-depends:    base >= 4.8 && < 4.10,
                      pugixml,
                      extra <= 1.6.3
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs
