name:          critic
version:       0.0.1
synopsis:      XML parser and writer
author:        Jonny Beaumont
maintainer:    Jonny Beaumont <jonathan.r.beaumont@gmail.com>, github: @jrbeaumont
category:      Parser
build-type:    Simple
cabal-version: >=1.10

library
    hs-source-dirs:   src
    exposed-modules:  Poets.Critic,
                      Poets.Critic.Format,
                      Poets.Critic.Manipulate,
                      Poets.Critic.Parser,
                      Poets.Critic.Types,
                      Poets.Critic.Trees,
                      Poets.Critic.View,
                      Poets.Critic.Writer,
                      Poets.Graph.GraphAlgebra
    build-depends:    base >= 4.8 && < 4.10,
                      pugixml, hexml == 0.3.2,
                      extra <= 1.6.3,
                      bytestring == 0.10.*,
                      split == 0.2.3.2,
                      random == 1.1
    default-language: Haskell2010
    other-extensions: TypeFamilies
    GHC-options:      -Wall -fwarn-tabs

executable critic
    main-is:          Main.hs
    build-depends:    base >= 4.8 && < 4.10,
                      pugixml,
                      extra <= 1.6.3,
                      bytestring == 0.10.*,
                      critic
    other-extensions: TypeFamilies
    default-language: Haskell2010
    GHC-options:      -Wall -fno-warn-name-shadowing -fwarn-tabs -O2
